--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "dts-bundle": "0.7.2",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "generate-json-webpack-plugin": "0.2.1",
+    "copy-webpack-plugin": "4.0.1",
     "github-api": "^3.0.0",
     "html-loader": "0.4.4",
     "http-server": "0.9.0",
